Adding support for textile comment blocks.
Comment blocks conveniently use the same syntax lists do, begining a line
with `###.`. This is bound clash with list cases, but none of the tests failed
and I won't sprend the time to come up with corner case tests.

In the PHP verion, comment blocks can have attributes like other blocks, although
these then just get ignored. This consistency means no extra effort was needed to
get this working. RedCloth does not support comments so I just did what PHP does.

closes #2

--- a/test/index.html
+++ b/test/index.html
@@ -24,6 +24,7 @@
   <script src="converted/table.js"></script>
   <script src="converted/textism.js"></script>
   <script src="converted/threshold.js"></script>
+  <script src="block_comments.js"></script>
   <script src="jstextile-tests.js"></script>
 
 </head>
