Fixed a link to raw.github file.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <script src="jquery.min.js"></script>
   <script src="jquery.minitabs.js"></script>
-  <script src="https://raw.github.com/borgar/textile-js/master/lib/textile.js"></script>
+  <script src="textile.min.js"></script>
   <script src="app.js"></script>
 
 </head>
