make it possible to avoid inline linebreaks

--- a/test/index.html
+++ b/test/index.html
@@ -26,6 +26,7 @@
   <script src="converted/threshold.js"></script>
   <script src="block_comments.js"></script>
   <script src="jstextile-tests.js"></script>
+  <script src="options.js"></script>
 
 </head>
 <body>
