Adding support for definition lists.
Closes #16

--- a/test/index.html
+++ b/test/index.html
@@ -13,7 +13,7 @@
 
   <script src="converted/basic.js"></script>
   <!-- <script src="converted/code.js"></script> -->
-  <!-- <script src="converted/definitions.js"></script> ... not supported -->
+  <script src="converted/definitions.js"></script>
   <script src="converted/extra_whitespace.js"></script>
   <script src="converted/filter_pba.js"></script>
   <!-- <script src="converted/html.js"></script> -->
