Support 2.2 style enchanced lists
This updates the list parsing to enable support for 2.2 enhanced lists, along with fixing the "optional-break before list" bug.

It turned out that there already were tests for all of most of the behavior that somehow had never gotten cleaned up and activated. I added some 2.2 specific tests and these are all running now, and passing.

Further reading: http://txstyle.org/article/37/enhanced-lists

Closes #18
Closes #30

--- a/test/index.html
+++ b/test/index.html
@@ -20,6 +20,7 @@
   <script src="converted/images.js"></script>
   <!-- <script src="converted/instiki.js"></script> -->
   <script src="converted/links.js"></script>
+  <script src="converted/lists.js"></script>
   <script src="converted/poignant.js"></script>
   <script src="converted/table.js"></script>
   <script src="converted/textism.js"></script>
