Support extended table syntax
This brings table markup up to date with the Textile spec.

Closes #32.

--- a/test/index.html
+++ b/test/index.html
@@ -23,6 +23,7 @@
   <script src="converted/lists.js"></script>
   <script src="converted/poignant.js"></script>
   <script src="converted/table.js"></script>
+  <script src="tables-extended.js"></script>
   <script src="converted/textism.js"></script>
   <script src="converted/threshold.js"></script>
   <script src="block_comments.js"></script>
